// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip/presenters/PanelPresenter renders with all props 1`] = `
.emotion-1 {
  border: 1px solid #393939;
  background-color: #393939;
  border-radius: 4px;
}

.emotion-0 {
  position: relative;
}

<div
  className="emotion-1"
  onScroll={[Function]}
  style={
    Object {
      "maxHeight": "42px",
    }
  }
>
  <div
    className="emotion-0"
  >
    Hello
  </div>
</div>
`;

exports[`tooltip/presenters/PanelPresenter renders without props 1`] = `
.emotion-1 {
  border: 1px solid #393939;
  background-color: #393939;
  border-radius: 4px;
}

.emotion-0 {
  position: relative;
}

<div
  className="emotion-1"
  onScroll={undefined}
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  <div
    className="emotion-0"
  />
</div>
`;
